--- a/ChiTietNgheSi1.html
+++ b/ChiTietNgheSi1.html
@@ -1,39 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Đông Hùng - 10/11 Monsoon Music Festival 2017</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
-
-    
+    <style>
+        body{
+            background-image: url("images/bg.jpg");
+        }
+    </style>
+    <title>Đông Hùng - 10/11 Monsoon Music Festival 2017</title>
 </head>
 <body>
-<div class="container">
-    <div class="container1">
-        <div class="details1">
-            <h4>Đông Hùng - 10/11</h4>
-            <span>Việt Nam</span>
-            <p>Nguyễn Đông Hùng, được biết tới với nghệ danh Đông Hùng là một ca sĩ trẻ có nhiều tiềm năng. Bước chân
-                vào con đường nghệ thuật mới 5 năm, nhưng Đông Hùng đã nhanh chóng ghi dấu trong lòng khán giả khi
-                thường xuyên góp mặt cùng các nghệ sĩ hàng đầu Việt Nam trong các sự kiện lớn. Với tính kiên định, bền
-                bỉ và chất giọng sáng, đẹp, kỹ thuật thanh nhạc chắc chắn, Đông Hùng đang từng bước khẳng định chính
-                mình trong mắt các nghệ sĩ đàn anh cũng như các nhà sản xuất âm nhạc.
-
-                Thế mạnh của Đông Hùng nằm ở những nốt cao , nhưng không vì thế mà mất đi chất trầm mặc tự sự. Đến với
-                Monsoon Music Festival 2017 lần này, Đông Hùng sẽ mang đến những sản phẩm mới nhất của chính mình, được
-                thực hiện bởi những người nhạc sĩ yêu mến Đông Hùng, và được trình diễn lần đầu tiên trước toàn bộ khán
-                giả của Monsoon Music Festival.</p>
-
-            <button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i>
-            </button>
-
+<div class="relative">
+    <nav>
+        <header>
+            <a href="index.html"> <img src="images/logo.PNG"/></a>
+        </header>
+        <div class="menu_double" style="padding: 20px;">
+            <ul>
+                <li><a href="introduce.html">GIỚI THIỆU</a>
+                </li>
+                <li><a href="#">NGHỆ SĨ</a>
+                </li>
+                <li><a href="#">SHOP</a>
+                </li>
+                <li><a href="#">ĐỐI TÁC</a>
+                </li>
+                <li><a href="#">TÌM HIỂU THÊM</a>
+                    <ul>
+                        <li><a href="#">MMF 2016</a></li>
+                        <li><a href="#">MMF 2015</a></li>
+                        <li><a href="#">MMF 2014</a></li>
+                        <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">THƯ VIỆN</a>
+                    <ul>
+                        <li><a href="gioithieu.html">HÌNH ẢNH</a></li>
+                        <li><a href="gioithieusinger.html">VIDEO</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">LIÊN HỆ</a>
+                </li>
+            </ul>
         </div>
-        <div class="details2">
-            <img src="images/DongHung.jpg">
+        <footer>
+            <div class="tim">
+                <input style="background-color: rgba(91, 91, 91, 0.56);border-radius:20px; " type="text" name="timkiem"
+                       value=""
+                       placeholder="Tìm kiếm"/>
+                <div class="logo">
+                    <a href="#"> <img src="images/facebook.png" width="30px" height="30px"/></a>
+                    <a href="#"> <img src="images/youtube.png" width="30px" height="30px"/></a>
+                    <a href="#"><img src="images/instagram.png" width="30px" height="30px"/></a>
+                </div>
+                <a class="write" style="color:#FFFFFF"> © Copyright 2017 Powered by Creg</a>
+            </div>
+        </footer>
+    </nav>
+</div>
+<article>
+    <!--Code gì thì code chỉ được code ở trong này nhé-->
+    <h1> <body>
+    <div class="container">
+        <div class="container1">
+            <div class="details1">
+                <h4>Đông Hùng - 10/11</h4>
+                <span>Việt Nam</span>
+                <p>Nguyễn Đông Hùng, được biết tới với nghệ danh Đông Hùng là một ca sĩ trẻ có nhiều tiềm năng. Bước chân
+                    vào con đường nghệ thuật mới 5 năm, nhưng Đông Hùng đã nhanh chóng ghi dấu trong lòng khán giả khi
+                    thường xuyên góp mặt cùng các nghệ sĩ hàng đầu Việt Nam trong các sự kiện lớn. Với tính kiên định, bền
+                    bỉ và chất giọng sáng, đẹp, kỹ thuật thanh nhạc chắc chắn, Đông Hùng đang từng bước khẳng định chính
+                    mình trong mắt các nghệ sĩ đàn anh cũng như các nhà sản xuất âm nhạc.
+
+                    Thế mạnh của Đông Hùng nằm ở những nốt cao , nhưng không vì thế mà mất đi chất trầm mặc tự sự. Đến với
+                    Monsoon Music Festival 2017 lần này, Đông Hùng sẽ mang đến những sản phẩm mới nhất của chính mình, được
+                    thực hiện bởi những người nhạc sĩ yêu mến Đông Hùng, và được trình diễn lần đầu tiên trước toàn bộ khán
+                    giả của Monsoon Music Festival.</p>
+
+                <button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i>
+                </button>
+
+            </div>
+            <div class="details2">
+                <img src="images/DongHung.jpg">
+            </div>
         </div>
+
     </div>
 
-</div>
-
+    </body></h1>
+</article>
 </body>
 </html>
