commit trang Chi tiết Đông Hùng

--- a/ChiTietNgheSi1.html
+++ b/ChiTietNgheSi1.html
@@ -66,8 +66,8 @@
     <div class="container">
         <div class="container1">
             <div class="details1">
-                <h4>Đông Hùng - 10/11</h4>
-                <span>Việt Nam</span>
+                <h4>ĐÔNG HÙNG - 10/11</h4>
+                <span style="color: white; font-size: 14px">Việt Nam</span><p></p><br>
                 <p>Nguyễn Đông Hùng, được biết tới với nghệ danh Đông Hùng là một ca sĩ trẻ có nhiều tiềm năng. Bước chân
                     vào con đường nghệ thuật mới 5 năm, nhưng Đông Hùng đã nhanh chóng ghi dấu trong lòng khán giả khi
                     thường xuyên góp mặt cùng các nghệ sĩ hàng đầu Việt Nam trong các sự kiện lớn. Với tính kiên định, bền
@@ -79,8 +79,9 @@
                     thực hiện bởi những người nhạc sĩ yêu mến Đông Hùng, và được trình diễn lần đầu tiên trước toàn bộ khán
                     giả của Monsoon Music Festival.</p>
 
-                <button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-ok"></i>
-                </button>
+                <div class="lo1">
+                    <a href="https://www.facebook.com/DongHungIdol/">f</a>
+                </div>
 
             </div>
             <div class="details2">
