--- a/event2016.html
+++ b/event2016.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
+    <link href="css/event2016.css" rel="stylesheet" type="text/css"/>
+    <style>
+        body {
+            background: url("images/2016.jpg");
+            font-family: 'Montserrat', sans-serif;
+        }
+    </style>
+    <title>event 2016</title>
 </head>
 <body>
-    <h1>khoand</h1>
+<div class="relative">
+    <nav>
+        <header>
+            <a href="index.html"> <img src="images/logo.PNG"/></a>
+        </header>
+        <div class="menu_double" style="padding: 20px;">
+            <ul>
+                <li><a href="introduce.html">GIỚI THIỆU</a>
+                </li>
+                <li><a href="#">NGHỆ SĨ</a>
+                </li>
+                <li><a href="#">SHOP</a>
+                </li>
+                <li><a href="#">ĐỐI TÁC</a>
+                </li>
+                <li><a href="#">TÌM HIỂU THÊM</a>
+                    <ul>
+                        <li><a href="#">MMF 2016</a></li>
+                        <li><a href="#">MMF 2015</a></li>
+                        <li><a href="#">MMF 2014</a></li>
+                        <li><a href="#">TRÁCH NHIỆM XÃ HỘI</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">THƯ VIỆN</a>
+                    <ul>
+                        <li><a href="gioithieu.html">HÌNH ẢNH</a></li>
+                        <li><a href="gioithieusinger.html">VIDEO</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">LIÊN HỆ</a>
+                </li>
+            </ul>
+        </div>
+        <footer>
+            <div class="tim">
+                <input style="background-color: rgba(91, 91, 91, 0.56);border-radius:20px; " type="text" name="timkiem"
+                       value=""
+                       placeholder="Tìm kiếm"/>
+                <div class="logo">
+                    <a href="#"> <img src="images/facebook.png" width="30px" height="30px"/></a>
+                    <a href="#"> <img src="images/youtube.png" width="30px" height="30px"/></a>
+                    <a href="#"><img src="images/instagram.png" width="30px" height="30px"/></a>
+                </div>
+                <a class="write" style="color:#FFFFFF"> © Copyright 2017 Powered by Creg</a>
+            </div>
+        </footer>
+    </nav>
+</div>
+<article>
+    <div class="container">
+        <div class="header">
+            <div class="time">
+                <a>00d/00h/00m/00s</a>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </div>
+            <img src="images/LOGO_MMF_2016.png">
+        </div>
+        <div class="title">
+            <p class="text-uppercase">TUYÊN TRUYỀN VÀ THAY ĐỔI<br>
+                NHẬN THỨC VỀ VĂN HOÁ GIAO THÔNG</p>
+        </div>
+        <div class="event1">
+            <div class="even1-1">
+                <h2  style="font-size: 70px" class="up-top">Năm 2016</h2>
+                <h3>Monsoon</h3>
+                <h3>Music Festival</h3>
+                <p>chính thức trở lại với tên gọi Lễ hội Âm nhạc Quốc tế Gió mùa 2016 cùng Tuborg - Monsoon Music
+                    Festival
+                    2016 by Tuborg, đánh dấu sự tham gia đồng hành của nhãn hàng bia Tuborg đến từ Đan Mạch trong
+                    vai trò nhà tài trợ kim cương của Monsoon Music Festival trong vòng 5 năm.</p>
+            </div>
+            <div class="even1-2">
+                <img src="images/2016-1.jpg" width="679px" height="519px"/>
+            </div>
+        </div>
+    </div>
+</article>
 </body>
 </html>
