--- a/event2016.html
+++ b/event2016.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background: url("images/2016.jpg");
-            font-family: 'Montserrat', sans-serif;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
     <title>event 2016</title>
@@ -74,11 +74,12 @@
             <p class="text-uppercase">TUYÊN TRUYỀN VÀ THAY ĐỔI<br>
                 NHẬN THỨC VỀ VĂN HOÁ GIAO THÔNG</p>
         </div>
+
         <div class="event1">
             <div class="even1-1">
-                <h2  style="font-size: 70px" class="up-top">Năm 2016</h2>
-                <h3>Monsoon</h3>
-                <h3>Music Festival</h3>
+                <h2 style="font-size: 85px" class="up-top">Năm 2016</h2>
+                <h3 style="font-size: 60px">Monsoon</h3>
+                <h3 style="font-size: 60px;padding-bottom: 35px;">Music Festival</h3>
                 <p>chính thức trở lại với tên gọi Lễ hội Âm nhạc Quốc tế Gió mùa 2016 cùng Tuborg - Monsoon Music
                     Festival
                     2016 by Tuborg, đánh dấu sự tham gia đồng hành của nhãn hàng bia Tuborg đến từ Đan Mạch trong
@@ -88,6 +89,37 @@
                 <img src="images/2016-1.jpg" width="679px" height="519px"/>
             </div>
         </div>
+
+        <div class="event2">
+            <div class="event2-1">
+                <img width="679px" height="519px" src="images/2016-2.jpg">
+            </div>
+            <div class="event2-2">
+                <h2 style="font-size: 85px" class="up-top">Trong 3 ngày</h2>
+                <h3 style="font-size: 60px">21 - 22 - 23 / 10 / 2016</h3>
+                <h3 style="font-size: 60px;padding-bottom: 35px;">tại Hoàng thành Thăng Long, Hà Nội</h3>
+                <p>Monsoon tiếp tục đem tới cho công chúng yêu nhạc Việt Nam và khu vực những nghệ sĩ tài năng ở đẳng
+                    cấp cao của Việt Nam và Thế giới. Với sự tham gia của nhóm nhạc huyền thoại Scorpions và rất nhiều
+                    tài năng trẻ khác, Monsoon tự tin đánh dấu tuổi thứ ba của mình với một không gian âm nhạc đạt tới
+                    đẳng cấp thế giới ngay giữa lòng thủ đô Hà Nội.</p>
+            </div>
+        </div>
+
+        <div class="event3">
+            <p class="p1">Năm 2016 còn là năm Monsoon chính thức bước chân vào con đường 5 năm nỗ lực đóng góp và cải thiện văn hoá
+                giao thông của cộng đồng, với sự tham gia và ủng hộ của nhiều tầng lớp trong xã hội. Với niềm tin rằng âm
+                nhạc sẽ là phương thức hữu hiệu nhất để chúng ta sống với nhau yêu thương hơn, để mỗi ngày đều là một ngày
+                an toàn về bên người thân và gia đình, thông qua các hoạt động trong khuôn khổ lễ hội, thông điệp về văn
+                hoá giao thông đã được gửi tới từng khán giả đến với sự kiện cũng như những người theo dõi trên các kênh
+                truyền thông</p>
+            <p class="p2">Với hơn 40.000 lượt khán giả có mặt tại sân Hoàng Thành sau 3 đêm biểu diễn, gần 4.000.000 lượt tiếp cận
+                trên fanpage chính thức và nhiều hơn thế nữa qua các kênh truyền thông đại chúng, Monsoon Music Festival
+                2016 by Tuborg chính thức đánh dấu 3 năm trưởng thành và phát triển của Lễ hội Âm nhạc Quốc tế Gió mùa,
+                mở ra một giai đoạn mới: đưa Monsoon Music Festival trở thành biểu tượng Văn hoá mới của Hà Nội, đem hình
+                ảnh một Hà Nội văn minh, trẻ trung và yêu nghệ thuật đến với bạn bè khu vực và quốc tế.</p>
+            <div class="img"><img src="images/LOGO_MMF_2016.png"></div>
+        </div>
+
     </div>
 </article>
 </body>
