khoand update font đẹp

--- a/event2014.html
+++ b/event2014.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/event2014.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
     <style>
         body{
             background-image: url("images/background_2014.jpg");
@@ -90,7 +91,7 @@
             </div>
         </div>
         <div class="event2">
-            <div><h1 style="color: #FFFFFF;font-size: 75px;font-family: 'Verdana'">Monsoon Music Festival 2014</h1></div>
+            <div><h1 style="color: #FFFFFF;font-size: 75px">Monsoon Music Festival 2014</h1></div>
             <div class="e2-1">
                 <img src="images/anh2_2014.jpg" />
             </div>
