--- a/event2014.html
+++ b/event2014.html
@@ -77,8 +77,8 @@
         </div>
         <div class="event1">
             <div class="e1-1">
-                <a style="font-size: 70px;color: #FFFFFF">Lần đầu<br> tiên</a><br>
-                <a style="font-size: 40px;color: #FFFFFF">TẠI TRUNG TÂM HÀ NỘI</a>
+                <a style="font-size: 80px;color: #FFFFFF;font-weight: 200">Lần đầu<br> tiên</a><br>
+                <a style="font-size: 40px;color: #FFFFFF;font-weight: 200">TẠI TRUNG TÂM HÀ NỘI</a>
                 <p>
                     có một festival âm nhạc quốc tế diễn ra trong vòng 3 ngày theo mô hình các Lễ hội Âm nhạc & Văn hoá nổi
                     tiếng trên thế giới. Monsoon Music Festival đã được diễn ra thành công trong suốt ba ngày 2-3-4/10/2014
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="event2">
-            <div><h1 style="color: #FFFFFF;font-size: 75px">Monsoon Music Festival 2014</h1></div>
+            <div><a style="font-size: 90px;color: #FFFFFF;line-height: 1em;font-weight: 200;">Monsoon Music Festival 2014</a></div>
             <div class="e2-1">
                 <img src="images/anh2_2014.jpg" />
             </div>
