--- a/event2015.html
+++ b/event2015.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/event2015.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
     <style>
         body{
             background-image: url("images/background_2015.jpg");
@@ -69,7 +70,7 @@
                 <i class="fa fa-facebook" aria-hidden="true"></i>
             </div>
             <img src="images/logo-monsoon-only.png">
-            <a class="titlea">MUSIC FESTIVAL 2015</a>
+            <a style="font-weight: 200;font-size: 70px" class="titlea">MUSIC FESTIVAL 2015</a>
         </div>
         <div class="title">
             <p class="text-uppercase">NÂNG CAO Ý THỨC
@@ -77,9 +78,9 @@
         </div>
         <div class="event1">
             <div class="e1-1">
-                <a style="font-size: 60px;color: #FFFFFF">Sau 2 năm tổ chức</a>
-                <a style="font-size: 40px;color: #FFFFFF">MONSOON</a><br>
-                <a style="font-size: 40px;color: #FFFFFF">MUSIC FESTIVAL</a>
+                <a style="font-size: 60px;color: #FFFFFF;font-weight: 200">Sau 2 năm tổ chức</a>
+                <a style="font-size: 40px;color: #FFFFFF;font-weight: 200">MONSOON</a><br>
+                <a style="font-size: 40px;color: #FFFFFF;font-weight: 200">MUSIC FESTIVAL</a>
                 <p>
                     đã quy tụ hơn 300 nghệ sĩ - bao gồm cả những nghệ sĩ có tên tuổi trong nước và quốc tế cũng như
                     những nghệ sĩ trẻ tài năng - cống hiến cho khán giả hàng chục giờ đắm chìm trong không gian âm
@@ -97,8 +98,8 @@
                 <img src="images/anh2_2015.jpg" />
             </div>
             <div class="e2-2">
-                <a style="font-size: 60px;color: #FFFFFF">Trong 04 ngày</a>
-                <a style="font-size: 40px;color: #FFFFFF">21 - 22 - 23 / 10 / 2015</a><br>
+                <a style="font-size: 60px;color: #FFFFFF;font-weight: 200">Trong 04 ngày</a>
+                <a style="font-size: 40px;color: #FFFFFF;font-weight: 200">21 - 22 - 23 / 10 / 2015</a><br>
                 <p>
                     hàng chục nghìn khán giả hâm mộ, yêu âm nhạc đã được thưởng thức 24 phần trình diễn độc đáo, đặc sắc
                     khác nhau với các phong cách âm nhạc đa dạng của các nghệ sĩ tài năng Việt Nam và quốc tế. Đặc biệt,
@@ -121,7 +122,7 @@
                 bên Hồ Gươm. Với sự đa dạng trong cách thức tổ chức và chất liệu âm nhạc, Monsoon Music Festival 2015 thực sự đã
                 đem nghệ thuật đến với tất cả mọi người.</p>
             <div class="img"><img src="images/LOGO_MMF_2016.png"><br>
-                <a style="font-size: 55px;color: #FFFFFF">MUSIC FESTIVAL 2015</a>
+                <a style="font-size: 55px;color: #FFFFFF;font-weight: 200">MUSIC FESTIVAL 2015</a>
             </div>
         </div>
 
