--- a/event2016.html
+++ b/event2016.html
@@ -4,10 +4,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/event2016.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
     <style>
         body {
             background: url("images/2016.jpg");
-            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
     <title>event 2016</title>
@@ -77,9 +77,9 @@
 
         <div class="event1">
             <div class="even1-1">
-                <h2 style="font-size: 85px" class="up-top">Năm 2016</h2>
-                <h3 style="font-size: 60px">Monsoon</h3>
-                <h3 style="font-size: 60px;padding-bottom: 35px;">Music Festival</h3>
+                <h2 style="font-size: 85px;font-weight: 200" class="up-top">Năm 2016</h2>
+                <h3 style="font-size: 60px;font-weight: 200">Monsoon</h3>
+                <h3 style="font-size: 60px;padding-bottom: 35px;font-weight: 200">Music Festival</h3>
                 <p>chính thức trở lại với tên gọi Lễ hội Âm nhạc Quốc tế Gió mùa 2016 cùng Tuborg - Monsoon Music
                     Festival
                     2016 by Tuborg, đánh dấu sự tham gia đồng hành của nhãn hàng bia Tuborg đến từ Đan Mạch trong
@@ -95,9 +95,9 @@
                 <img width="679px" height="519px" src="images/2016-2.jpg">
             </div>
             <div class="event2-2">
-                <h2 style="font-size: 85px" class="up-top">Trong 3 ngày</h2>
-                <h3 style="font-size: 60px">21 - 22 - 23 / 10 / 2016</h3>
-                <h3 style="font-size: 60px;padding-bottom: 35px;">tại Hoàng thành Thăng Long, Hà Nội</h3>
+                <h2 style="font-size: 85px;font-weight: 200" class="up-top">Trong 3 ngày</h2>
+                <h3 style="font-size: 60px;font-weight: 200">21 - 22 - 23 / 10 / 2016</h3>
+                <h3 style="font-size: 60px;padding-bottom: 35px;font-weight: 200">tại Hoàng thành Thăng Long, Hà Nội</h3>
                 <p>Monsoon tiếp tục đem tới cho công chúng yêu nhạc Việt Nam và khu vực những nghệ sĩ tài năng ở đẳng
                     cấp cao của Việt Nam và Thế giới. Với sự tham gia của nhóm nhạc huyền thoại Scorpions và rất nhiều
                     tài năng trẻ khác, Monsoon tự tin đánh dấu tuổi thứ ba của mình với một không gian âm nhạc đạt tới
