--- a/DoiTac.html
+++ b/DoiTac.html
@@ -79,8 +79,7 @@
             <div class="info">
                 <img src="images/DoiTac2.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">TUBORG
-                        KẾT NỐI VÀ CẤT CÁNH CHO NHỮNG ĐAM MÊ ÂM NHẠC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">THE ARENA</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -101,8 +100,7 @@
             <div class="info">
                 <img src="images/DoiTac3.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">TUBORG
-                        KẾT NỐI VÀ CẤT CÁNH CHO NHỮNG ĐAM MÊ ÂM NHẠC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">BOOKING.COM</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -121,8 +119,7 @@
             <div class="info">
                 <img src="images/DoiTac4.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">TUBORG
-                        KẾT NỐI VÀ CẤT CÁNH CHO NHỮNG ĐAM MÊ ÂM NHẠC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">JETSTAR PACIFIC</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -133,8 +130,7 @@
             <div class="info">
                 <img src="images/DoiTac5.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">TUBORG
-                        KẾT NỐI VÀ CẤT CÁNH CHO NHỮNG ĐAM MÊ ÂM NHẠC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">VIETNAM AIRLINES</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -143,8 +139,7 @@
             <div class="info">
                 <img src="images/DoiTac6.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">TUBORG
-                        KẾT NỐI VÀ CẤT CÁNH CHO NHỮNG ĐAM MÊ ÂM NHẠC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">MAY DE VILLE HOTEL GROUP</a><br>
                     <button>
                         CHI TIẾT
                     </button>
@@ -153,8 +148,7 @@
             <div class="info">
                 <img src="images/DoiTac7.jpg">
                 <div class="subInfo">
-                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">TUBORG
-                        KẾT NỐI VÀ CẤT CÁNH CHO NHỮNG ĐAM MÊ ÂM NHẠC</a><br>
+                    <a href="http://www.monsoonfestival.vn/news/tuborg-ket-noi-va-cat-canh-cho-nhung-dam-me-am-nhac/Sk6Y4KJXM.html">FPT PLAY</a><br>
                     <button>
                         CHI TIẾT
                     </button>
