--- a/event2014.html
+++ b/event2014.html
@@ -2,12 +2,106 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/event2014.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese"
+          rel="stylesheet">
     <style>
-        body{
+        body {
             background-image: url("images/background_2014.jpg");
+            width: 100%;
+            height: 100%;
+        }
+
+        @media all and (max-width: 414px) {
+            body {
+                background-attachment: scroll;
+            }
+
+            .header .titlea {
+                font-size: 65px;
+            }
+
+            .relative {
+                display: none;
+            }
+
+            .text-uppercase {
+                font-size: 20px;
+            }
+
+            .title p {
+                font-size: 40px;
+                line-height: 70px;
+            }
+
+            article {
+                width: 100%;
+                margin-left: 0%;
+            }
+
+            .event1 {
+                padding: 0px;
+            }
+
+            .event1 .e1-1 {
+                width: 100%;
+                clear: both;
+            }
+
+            .event1 .e1-1 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event1 .e1-2 {
+                clear: both;
+                width: 100%;
+                margin-left: 0px;
+            }
+
+            .event1 .e1-2 img {
+
+            }
+
+            .event2 {
+                padding: 0px;
+                clear: both;
+                width: 100%;
+                height: 50%;
+            }
+
+            .event2 .e2-1 {
+                clear: both;
+                padding: 0px;
+            }
+
+            .event2 .e2-2 {
+                width: 100%;
+                clear: both;
+                padding: 0px;
+            }
+
+            .event2 .e2-2 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 {
+                width: 100%;
+                clear: both;
+                padding: 0px;
+
+            }
+
+            .event3 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
         }
     </style>
     <title>Event 2014</title>
@@ -77,43 +171,57 @@
         </div>
         <div class="event1">
             <div class="e1-1">
-                <a style="font-size: 80px;color: #FFFFFF;font-weight: 200">Lần đầu<br> tiên</a><br>
+                <a style="font-size: 80px;color: #FFFFFF;font-weight: 200">Lần đầu tiên</a><br>
                 <a style="font-size: 40px;color: #FFFFFF;font-weight: 200">TẠI TRUNG TÂM HÀ NỘI</a>
                 <p>
-                    có một festival âm nhạc quốc tế diễn ra trong vòng 3 ngày theo mô hình các Lễ hội Âm nhạc & Văn hoá nổi
-                    tiếng trên thế giới. Monsoon Music Festival đã được diễn ra thành công trong suốt ba ngày 2-3-4/10/2014
-                    tại khu vực sân cỏ Hoàng thành Thăng Long- Hà Nội. Lễ hội âm nhạc thu hút 30.000 khán giả trong và ngoài
+                    có một festival âm nhạc quốc tế diễn ra trong vòng 3 ngày theo mô hình các Lễ hội Âm nhạc & Văn hoá
+                    nổi
+                    tiếng trên thế giới. Monsoon Music Festival đã được diễn ra thành công trong suốt ba ngày
+                    2-3-4/10/2014
+                    tại khu vực sân cỏ Hoàng thành Thăng Long- Hà Nội. Lễ hội âm nhạc thu hút 30.000 khán giả trong và
+                    ngoài
                     nước, cùng sống trong bầu không khí tràn ngập âm nhạc hiện đại, văn minh.
                 </p>
             </div>
             <div class="e1-2">
-                <img src="images/anh1_2014.jpg" />
+                <img src="images/anh1_2014.jpg"/>
             </div>
         </div>
+        <div><a style="font-size: 90px;color: #FFFFFF;line-height: 1em;font-weight: 200;">Monsoon Music Festival
+            2014</a></div>
         <div class="event2">
-            <div><a style="font-size: 90px;color: #FFFFFF;line-height: 1em;font-weight: 200;">Monsoon Music Festival 2014</a></div>
             <div class="e2-1">
-                <img src="images/anh2_2014.jpg" />
+                <img src="images/anh2_2014.jpg"/>
             </div>
             <div class="e2-2">
                 <a style="font-size: 60px;color: #FFFFFF">Trong 04 ngày</a>
                 <a style="font-size: 40px;color: #FFFFFF">21 - 22 - 23 / 10 / 2015</a><br>
                 <p>
-                    đến từ Đan Mạch, Anh, Pháp, Bỉ, Hàn Quốc và Nhật Bản. Trong đó có nhiều nghệ sĩ đến Việt Nam với một ê
-                    kíp hùng hậu (ban nhạc, kỹ thuật viên âm thanh, quay phim...). Monsoon Music Festival 2014 đã giới thiệu
-                    đến khán giả Việt Nam tất cả các phần trình diễn âm nhạc đa phong cách, chuẩn mực và mới mẻ của các quốc
-                    gia, các nghệ sĩ- ban nhạc. Trong đó, có những nghệ sĩ ở đẳng cấp quốc tế như nhà sản xuất – guitarist
-                    Dominic Miller, đẳng cấp châu Âu như ban nhạc rock Đan Mạch Carpark North, và kể cả những nhóm nhạc đương
+                    đến từ Đan Mạch, Anh, Pháp, Bỉ, Hàn Quốc và Nhật Bản. Trong đó có nhiều nghệ sĩ đến Việt Nam với một
+                    ê
+                    kíp hùng hậu (ban nhạc, kỹ thuật viên âm thanh, quay phim...). Monsoon Music Festival 2014 đã giới
+                    thiệu
+                    đến khán giả Việt Nam tất cả các phần trình diễn âm nhạc đa phong cách, chuẩn mực và mới mẻ của các
+                    quốc
+                    gia, các nghệ sĩ- ban nhạc. Trong đó, có những nghệ sĩ ở đẳng cấp quốc tế như nhà sản xuất –
+                    guitarist
+                    Dominic Miller, đẳng cấp châu Âu như ban nhạc rock Đan Mạch Carpark North, và kể cả những nhóm nhạc
+                    đương
                     đại mang màu sắc dân gian đặc trưng của Vương quốc Anh như 9Bach.
                 </p>
             </div>
         </div>
         <div class="event3">
-            <p class="p1">Monsoon Music Festival 2014 cũng đã có sự góp mặt bình đẳng của các nghệ sĩ đẳng cấp tại Việt Nam
-                như nhóm Nguồn cội của nhạc sĩ Quốc Trung, diva Thanh Lam – Trần Thu Hà, nhóm Năm dòng kẻ, nhóm Ngũ Cung, cùng
-                với những nghệ sĩ trẻ tài tăng của Việt Nam như nhóm Kimmese- Touliver, Tuấn Kruise, Suboi, Slim V & Dàn nhạc
-                giao hưởng Rhapsody Philharmonic, ban nhạc rock trẻ KOP. Họ đã đến với Monsoon Music Festival để giới thiệu
-                những dự án âm nhạc mới nhất của mình, cống hiến cho công chúng sự lao động nghệ thuật nghiêm túc, sáng tạo và
+            <p class="p1">Monsoon Music Festival 2014 cũng đã có sự góp mặt bình đẳng của các nghệ sĩ đẳng cấp tại Việt
+                Nam
+                như nhóm Nguồn cội của nhạc sĩ Quốc Trung, diva Thanh Lam – Trần Thu Hà, nhóm Năm dòng kẻ, nhóm Ngũ
+                Cung, cùng
+                với những nghệ sĩ trẻ tài tăng của Việt Nam như nhóm Kimmese- Touliver, Tuấn Kruise, Suboi, Slim V & Dàn
+                nhạc
+                giao hưởng Rhapsody Philharmonic, ban nhạc rock trẻ KOP. Họ đã đến với Monsoon Music Festival để giới
+                thiệu
+                những dự án âm nhạc mới nhất của mình, cống hiến cho công chúng sự lao động nghệ thuật nghiêm túc, sáng
+                tạo và
                 có giá trị.</p>
             <div class="img"><img src="images/LOGO_MMF_2016.png"><br>
                 <a style="font-size: 55px;color: #FFFFFF">MUSIC FESTIVAL 2014</a>
