css chinh zoom anh

--- a/LienHe.html
+++ b/LienHe.html
@@ -4,6 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/LienHe.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
     <style>
     </style>
     <title>Liên hệ - Monsoon Music Festival 2017</title>
@@ -71,39 +72,69 @@
 
 
     <!--Code gì thì code chỉ được code ở trong này nhé-->
+    <div class="container">
     <div class="map">
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1757.4779629391144!2d105.76591603581934!3d21.034051320713168!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b9470a0ee1%3A0x2ffb89052ebf037e!2sMD+Complex+Tower!5e0!3m2!1sen!2s!4v1522393906020"
-                width="100%" height="360px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="info">
-        <div class="info1">
-            <form method="post" action="example.com/register.php">
-                <br>
-                <input type="text" name="username" value="Họ Và Tên"> <br>
-                <br>
-                <input type="password" name="id_user_pass" placeholder="Tiêu Đề"> <br>
-                <br>
-                <input type="submit" name="register_user" value="Register">
-            </form>
 
+        <div class="info1">
 
         </div>
-        <div class="info2">
-            <h4>THÔNG TIN LIÊN HỆ</h4>
-            <hr>
-            <p>32M Lý Nam Đế, phường Cửa Đông
 
-                quận Hoàn Kiếm, Hà Nội, Việt Nam</p>
+        <div class="info2">
+            <div class="contact-info">
+                <h4>THÔNG TIN LIÊN HỆ</h4>
+
+
+                <ul class="infoz" style="list-style-type: none;">
+                    <li>
+                        <div class="icon1"><img src="images/iconPlace1.png"></div>
+                        <div class="contentz">
+                            <hr>
+                            <p>32M Lý Nam Đế, phường Cửa Đông</p>
+                            <p>quận Hoàn Kiếm, Hà Nội, Việt Nam</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon1"><img src="images/logoPlace2.png"></div>
+                        <div class="contentz">
+                            <hr>
+                            <p>7:30am - 5:30pm</p>
+                            <p>10:00am - 7:30pm</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon1"><img src="images/logoPlace3.png"></div>
+                        <div class="contentz">
+                            <hr>
+                            <p>Hotline Bán vé:<br> <a href="tel:0949000622">0949000622</a></p>
+                            <p>Hotline Thông tin:<br> <a href="tel:0949000633">0949000633</a></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="icon1"><img src="images/logoPlace4.png"></div>
+                        <div class="contentz">
+                            <hr>
+                            <p>info@thanhviet.pro.vn</p>
+                            <p>http://thanhviet.pro.vn</p>
+                        </div>
+                    </li>
+                </ul>
+
+            </div>
         </div>
         <div class="info3">
-            <div class="fb-page" data-href="https://www.facebook.com/thanhviet.pro.vn/" data-tabs="timeline"
-                 data-width="390" data-height="400" data-small-header="false" data-adapt-container-width="true"
+            <div class="fb-page" style="margin-top: 20px" data-href="https://www.facebook.com/thanhviet.pro.vn/" data-tabs="timeline"
+                 data-width="390" data-height="470" data-small-header="false" data-adapt-container-width="true"
                  data-hide-cover="false" data-show-facepile="true">
                 <blockquote cite="https://www.facebook.com/thanhviet.pro.vn/" class="fb-xfbml-parse-ignore"><a
                         href="https://www.facebook.com/thanhviet.pro.vn/">Thanh Việt Production</a></blockquote>
             </div>
 
         </div>
+    </div>
     </div>
 </article>
 </body>
