Event 2014-2016 respon by Hieu Pikas at 4/4/2018 15:20

--- a/event2014.html
+++ b/event2014.html
@@ -17,10 +17,15 @@
         @media all and (max-width: 414px) {
             body {
                 background-attachment: scroll;
+                text-align: justify;
             }
 
             .header .titlea {
                 font-size: 65px;
+            }
+
+            .time a {
+                display: none;
             }
 
             .relative {
@@ -34,6 +39,9 @@
             .title p {
                 font-size: 40px;
                 line-height: 70px;
+                position: absolute;
+                bottom: 50px;
+                left: 20%;
             }
 
             article {
@@ -63,7 +71,10 @@
             }
 
             .event1 .e1-2 img {
-
+                width: 1000px;
+                height: auto;
+                padding: 10%;
+                box-shadow: none;
             }
 
             .event2 {
@@ -84,6 +95,13 @@
                 padding: 0px;
             }
 
+            .event2 .e2-1 img {
+                width: 1000px;
+                height: auto;
+                padding: 20%;
+                box-shadow: none;
+            }
+
             .event2 .e2-2 p {
                 font-size: 40px;
                 line-height: 70px;
@@ -93,7 +111,7 @@
             .event3 {
                 width: 100%;
                 clear: both;
-                padding: 0px;
+                padding-top: 100px;
 
             }
 
@@ -101,6 +119,20 @@
                 font-size: 40px;
                 line-height: 70px;
                 font-weight: 100;
+            }
+
+            .event3 .img {
+                padding-top: 100px;
+                padding-left: 150px;
+            }
+
+            .event3 .img img {
+                width: 1000px;
+                height: auto;
+            }
+
+            .event3 .img a {
+                padding-left: 200px;
             }
         }
     </style>
