--- a/event2015.html
+++ b/event2015.html
@@ -2,12 +2,146 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/event2015.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese"
+          rel="stylesheet">
     <style>
-        body{
-            background-image: url("images/background_2015.jpg");
+        body {
+            background-image: url("images/background_2014.jpg");
+            width: 100%;
+            height: 100%;
+        }
+
+        @media all and (max-width: 414px) {
+            body {
+                background-attachment: scroll;
+                text-align: justify;
+            }
+
+            .time a {
+                display: none;
+            }
+
+            .relative {
+                display: none;
+            }
+
+            .text-uppercase {
+                font-size: 20px;
+            }
+
+            .title p {
+                font-size: 40px;
+                line-height: 70px;
+                position: absolute;
+                bottom: 50px;
+                left: 20%;
+            }
+
+            article {
+                width: 100%;
+                margin-left: 0%;
+            }
+
+            .event1 {
+                padding: 0px;
+            }
+
+            .event1 .e1-1 {
+                width: 100%;
+                clear: both;
+            }
+
+            .event1 .e1-1 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event1 .e1-2 {
+                clear: both;
+                width: 100%;
+                margin-left: 0px;
+            }
+
+            .event1 .e1-2 img {
+                width: 1000px;
+                height: auto;
+                padding: 10%;
+                box-shadow: none;
+            }
+
+            .event2 {
+                padding: 0px;
+                clear: both;
+                width: 100%;
+                height: 50%;
+            }
+
+            .event2 .e2-1 {
+                clear: both;
+                padding: 0px;
+            }
+
+            .event2 .e2-2 {
+                width: 100%;
+                clear: both;
+                padding: 0px;
+            }
+
+            .event2 .e2-1 img {
+                width: 1000px;
+                height: auto;
+                padding: 20%;
+                box-shadow: none;
+            }
+
+            .event2 .e2-2 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 {
+                width: 100%;
+                clear: both;
+                padding-top: 100px;
+
+            }
+
+            .event3 .p1 {
+                width: 100%;
+                clear: both;
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 .p2 {
+                padding-top: 100px;
+                width: 100%;
+                clear: both;
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 .img {
+                padding-top: 100px;
+                padding-left: 150px;
+            }
+
+            .event3 .img img {
+                width: 1000px;
+                height: auto;
+                padding-top: 100px;
+            }
+
+            .event3 .img a {
+                padding-left: 200px;
+            }
         }
     </style>
     <title>Event 2015</title>
@@ -70,7 +204,7 @@
                 <i class="fa fa-facebook" aria-hidden="true"></i>
             </div>
             <img src="images/logo-monsoon-only.png">
-            <a style="font-weight: 200;font-size: 70px" class="titlea">MUSIC FESTIVAL 2015</a>
+            <a class="titlea">MUSIC FESTIVAL 2015</a>
         </div>
         <div class="title">
             <p class="text-uppercase">NÂNG CAO Ý THỨC
@@ -90,12 +224,12 @@
                 </p>
             </div>
             <div class="e1-2">
-                <img src="images/anh1_2015.jpg" />
+                <img src="images/anh1_2015.jpg"/>
             </div>
         </div>
         <div class="event2">
             <div class="e2-1">
-                <img src="images/anh2_2015.jpg" />
+                <img src="images/anh2_2015.jpg"/>
             </div>
             <div class="e2-2">
                 <a style="font-size: 60px;color: #FFFFFF;font-weight: 200">Trong 04 ngày</a>
@@ -103,26 +237,38 @@
                 <p>
                     hàng chục nghìn khán giả hâm mộ, yêu âm nhạc đã được thưởng thức 24 phần trình diễn độc đáo, đặc sắc
                     khác nhau với các phong cách âm nhạc đa dạng của các nghệ sĩ tài năng Việt Nam và quốc tế. Đặc biệt,
-                    Monsoon Music Festival 2015 có sự xuất hiện của 2 nghệ sĩ, ban nhạc nổi tiếng thế giới là nữ ca sĩ Joss
+                    Monsoon Music Festival 2015 có sự xuất hiện của 2 nghệ sĩ, ban nhạc nổi tiếng thế giới là nữ ca sĩ
+                    Joss
                     Stone và tứ tấu đàn dây BOND.
                 </p>
             </div>
         </div>
         <div class="event3">
-            <p class="p1">Không chỉ dừng lại ở việc mang Âm nhạc đến cho cộng đồng, Monsoon Music Festival còn truyền tải những
-                thông điệp tới xã hội: Nếu như năm 2014 là thông điệp về bảo vệ môi trường với những hành động thiết thực ngay
-                tại địa điểm tổ chức sự kiện và các khu vực công cộng thì tới năm 2015, văn hoá ứng xử cộng đồng được đề cao hơn
-                bao giờ hết khi khán giả đến với Lễ hội Âm nhạc Quốc tế Gió mùa. Có lẽ không một sự kiện văn hoá nào mà sân cỏ
-                lại sạch bóng rác thải như Monsoon Music Festival khi khán giả và nghệ sĩ cùng chung tay thu dọn trước khi ra về,
-                hay cùng hô vang những khẩu hiệu về văn hoá ứng xử công cộng khi tham gia các hoạt động bên lề sự kiện.</p>
-            <p class="p2">Khác với năm 2014, các buổi biểu diễn âm nhạc đường phố của Monsoon Music Festival 2015 có mục tiêu
-                lớn hơn khi mong muốn đem âm nhạc tới mọi người. Chính vì vậy, không chỉ giới hạn ở việc biểu diễn âm nhạc dành
-                cho giới trẻ, các buổi biểu diễn âm nhạc đường phố còn tiếp cận tới những đối tượng đa dạng hơn khi đem âm nhạc
-                vào một buổi tập Aerobic ở công viên Thành Công, hay biểu diễn nhạc sống cho buổi sinh hoạt của CLB Dancesport
-                bên Hồ Gươm. Với sự đa dạng trong cách thức tổ chức và chất liệu âm nhạc, Monsoon Music Festival 2015 thực sự đã
+            <p class="p1">Không chỉ dừng lại ở việc mang Âm nhạc đến cho cộng đồng, Monsoon Music Festival còn truyền
+                tải những
+                thông điệp tới xã hội: Nếu như năm 2014 là thông điệp về bảo vệ môi trường với những hành động thiết
+                thực ngay
+                tại địa điểm tổ chức sự kiện và các khu vực công cộng thì tới năm 2015, văn hoá ứng xử cộng đồng được đề
+                cao hơn
+                bao giờ hết khi khán giả đến với Lễ hội Âm nhạc Quốc tế Gió mùa. Có lẽ không một sự kiện văn hoá nào mà
+                sân cỏ
+                lại sạch bóng rác thải như Monsoon Music Festival khi khán giả và nghệ sĩ cùng chung tay thu dọn trước
+                khi ra về,
+                hay cùng hô vang những khẩu hiệu về văn hoá ứng xử công cộng khi tham gia các hoạt động bên lề sự
+                kiện.</p>
+            <p class="p2">Khác với năm 2014, các buổi biểu diễn âm nhạc đường phố của Monsoon Music Festival 2015 có mục
+                tiêu
+                lớn hơn khi mong muốn đem âm nhạc tới mọi người. Chính vì vậy, không chỉ giới hạn ở việc biểu diễn âm
+                nhạc dành
+                cho giới trẻ, các buổi biểu diễn âm nhạc đường phố còn tiếp cận tới những đối tượng đa dạng hơn khi đem
+                âm nhạc
+                vào một buổi tập Aerobic ở công viên Thành Công, hay biểu diễn nhạc sống cho buổi sinh hoạt của CLB
+                Dancesport
+                bên Hồ Gươm. Với sự đa dạng trong cách thức tổ chức và chất liệu âm nhạc, Monsoon Music Festival 2015
+                thực sự đã
                 đem nghệ thuật đến với tất cả mọi người.</p>
             <div class="img"><img src="images/LOGO_MMF_2016.png"><br>
-                <a style="font-size: 55px;color: #FFFFFF;font-weight: 200">MUSIC FESTIVAL 2015</a>
+                <a style="font-size: 55px;color: #FFFFFF;">MUSIC FESTIVAL 2015</a>
             </div>
         </div>
 
