--- a/event2016.html
+++ b/event2016.html
@@ -2,12 +2,148 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/event2016.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese"
+          rel="stylesheet">
     <style>
         body {
-            background: url("images/2016.jpg");
+            background-image: url("images/background_2014.jpg");
+            width: 100%;
+            height: 100%;
+        }
+
+        @media all and (max-width: 414px) {
+            body {
+                background-attachment: scroll;
+                text-align: justify;
+            }
+
+            .time a {
+                display: none;
+            }
+            .header img{
+                width:800px;
+            }
+            .relative {
+                display: none;
+            }
+
+            .text-uppercase {
+                font-size: 20px;
+            }
+
+            .title p {
+                font-size: 40px;
+                line-height: 70px;
+                position: absolute;
+                bottom: 50px;
+                left: 20%;
+            }
+
+            article {
+                width: 100%;
+                margin-left: 0%;
+            }
+
+            .event1 {
+                padding: 0px;
+            }
+
+            .event1 .even1-1 {
+                width: 100%;
+                clear: both;
+            }
+
+            .event1 .even1-1 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event1 .even1-2 {
+                clear: both;
+                width: 100%;
+                margin-left: 0px;
+            }
+
+            .event1 .even1-2 img {
+                width: 1000px;
+                height: auto;
+                padding: 10%;
+                box-shadow: none;
+            }
+
+            .event2 {
+                padding: 0px;
+                clear: both;
+                width: 100%;
+                height: 50%;
+            }
+
+            .event2 .event2-1 {
+                clear: both;
+                padding: 0px;
+            }
+
+            .event2 .event2-2 {
+                width: 100%;
+                clear: both;
+                padding: 0px;
+            }
+
+            .event2 .event2-1 img {
+                width: 1000px;
+                height: auto;
+                padding: 20%;
+                box-shadow: none;
+            }
+
+            .event2 .event2-2  p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 {
+                width: 100%;
+                clear: both;
+                padding-top: 100px;
+
+            }
+
+            .event3 .p1 {
+                width: 100%;
+                clear: both;
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 .p2 {
+                padding-top: 100px;
+                width: 100%;
+                clear: both;
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event3 .img {
+                padding-top: 100px;
+                padding-left: 150px;
+            }
+
+            .event3 .img img {
+                width: 1000px;
+                height: auto;
+                padding-top: 100px;
+            }
+
+            .event3 .img a {
+                padding-left: 200px;
+            }
         }
     </style>
     <title>event 2016</title>
@@ -97,7 +233,8 @@
             <div class="event2-2">
                 <h2 style="font-size: 85px;font-weight: 200" class="up-top">Trong 3 ngày</h2>
                 <h3 style="font-size: 60px;font-weight: 200">21 - 22 - 23 / 10 / 2016</h3>
-                <h3 style="font-size: 60px;padding-bottom: 35px;font-weight: 200">tại Hoàng thành Thăng Long, Hà Nội</h3>
+                <h3 style="font-size: 60px;padding-bottom: 35px;font-weight: 200">tại Hoàng thành Thăng Long, Hà
+                    Nội</h3>
                 <p>Monsoon tiếp tục đem tới cho công chúng yêu nhạc Việt Nam và khu vực những nghệ sĩ tài năng ở đẳng
                     cấp cao của Việt Nam và Thế giới. Với sự tham gia của nhóm nhạc huyền thoại Scorpions và rất nhiều
                     tài năng trẻ khác, Monsoon tự tin đánh dấu tuổi thứ ba của mình với một không gian âm nhạc đạt tới
@@ -106,16 +243,21 @@
         </div>
 
         <div class="event3">
-            <p class="p1">Năm 2016 còn là năm Monsoon chính thức bước chân vào con đường 5 năm nỗ lực đóng góp và cải thiện văn hoá
-                giao thông của cộng đồng, với sự tham gia và ủng hộ của nhiều tầng lớp trong xã hội. Với niềm tin rằng âm
-                nhạc sẽ là phương thức hữu hiệu nhất để chúng ta sống với nhau yêu thương hơn, để mỗi ngày đều là một ngày
+            <p class="p1">Năm 2016 còn là năm Monsoon chính thức bước chân vào con đường 5 năm nỗ lực đóng góp và cải
+                thiện văn hoá
+                giao thông của cộng đồng, với sự tham gia và ủng hộ của nhiều tầng lớp trong xã hội. Với niềm tin rằng
+                âm
+                nhạc sẽ là phương thức hữu hiệu nhất để chúng ta sống với nhau yêu thương hơn, để mỗi ngày đều là một
+                ngày
                 an toàn về bên người thân và gia đình, thông qua các hoạt động trong khuôn khổ lễ hội, thông điệp về văn
                 hoá giao thông đã được gửi tới từng khán giả đến với sự kiện cũng như những người theo dõi trên các kênh
                 truyền thông</p>
-            <p class="p2">Với hơn 40.000 lượt khán giả có mặt tại sân Hoàng Thành sau 3 đêm biểu diễn, gần 4.000.000 lượt tiếp cận
+            <p class="p2">Với hơn 40.000 lượt khán giả có mặt tại sân Hoàng Thành sau 3 đêm biểu diễn, gần 4.000.000
+                lượt tiếp cận
                 trên fanpage chính thức và nhiều hơn thế nữa qua các kênh truyền thông đại chúng, Monsoon Music Festival
                 2016 by Tuborg chính thức đánh dấu 3 năm trưởng thành và phát triển của Lễ hội Âm nhạc Quốc tế Gió mùa,
-                mở ra một giai đoạn mới: đưa Monsoon Music Festival trở thành biểu tượng Văn hoá mới của Hà Nội, đem hình
+                mở ra một giai đoạn mới: đưa Monsoon Music Festival trở thành biểu tượng Văn hoá mới của Hà Nội, đem
+                hình
                 ảnh một Hà Nội văn minh, trẻ trung và yêu nghệ thuật đến với bạn bè khu vực và quốc tế.</p>
             <div class="img"><img src="images/LOGO_MMF_2016.png"></div>
         </div>
