--- a/shop.html
+++ b/shop.html
@@ -88,7 +88,11 @@
             </div>
             <div class="content">
                 <div class="c1">
-
+                    <div>
+                        <a>VÉ THƯỜNG</a>
+                        <a>330.000 VND</a>
+                        <div></div>
+                    </div>
                 </div>
                 <div class="c2">
 
