Hieu Pikas commit 05/04/2018 15:39 edit

--- a/ChiTietNgheSy10.html
+++ b/ChiTietNgheSy10.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>THE OTHER SHI - 10/11</h4>
-                    <span style="color: white; font-size: 14px">Đức</span>
+                    <span>Đức</span>
                     <p></p><br>
                     <p>Nghệ sĩ đa tài – ca sĩ Alisa Tsybina (HH) đã gặp Kĩ sư âm thanh, nhà tiên phong và nhà soạn nhạc
                         kịch Gordian Gleis (London/Berlin/HH) – họ cùng nhau tạo nên một sự khám phá mới và thú vị cho
