--- a/ChiTietNgheSy11.html
+++ b/ChiTietNgheSy11.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +70,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>I WEAR * EXPERIMENT - 11/11</h4>
-                    <span style="color: white; font-size: 14px">Estonia</span>
+                    <span>Estonia</span>
                     <p></p><br>
                     <p>Nhóm nhạc I Wear* Experiment là một nhóm nhạc điện tử đến từ Bắc Âu với phong cách âm nhạc đương
                         đại trong không gian giàu hình ảnh. I Wear* Experiment được Estonian Media bình chọn là một
