--- a/ChiTietNgheSy2.html
+++ b/ChiTietNgheSy2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>GARDEN CITY MOVEMENT - 12/11</h4>
-                    <span style="color: white; font-size: 14px">Israel</span>
+                    <span>Israel</span>
                     <p></p><br>
                     <p>NgGarden City Movement là nhóm nhạc indie pop thành lập tại Tel Aviv, Israel năm 2014.
                         Nhóm nhạc bao gồm Roi Avital (Vocal, Keyboards, Guitar), Joe Saar (Guitar, Sampler,
