--- a/ChiTietNgheSy4.html
+++ b/ChiTietNgheSy4.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>BIURET - 12/11</h4>
-                    <span style="color: white; font-size: 14px">Hàn Quốc</span>
+                    <span>Hàn Quốc</span>
                     <p></p><br>
                     <p>Lần đầu tiên ra mắt vào năm 2005, Biuret đã nhanh chóng trở thành đại diện cho những nhóm nhạc
                         Rock Hàn Quốc có giọng ca chính là nữ. Biuret lần đầu tiên được biết đến nhờ chiến thắng trong
