--- a/ChiTietNgheSy9.html
+++ b/ChiTietNgheSy9.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>LAVAGANCE - 11/11</h4>
-                    <span style="color: white; font-size: 14px">Slovakia</span>
+                    <span>Slovakia</span>
                     <p></p><br>
                     <p>Lavagance là nhóm nhạc indie pop đến từ Slovakia. Với các nhạc cụ guitar, keyboard, bass và
                         trống, Lavagance tạo ra những giai điệu thu hút, pha trộn giữa indie pop, neo soul và electro,
