--- a/ChiTietNgheSi1.html
+++ b/ChiTietNgheSi1.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
-        body{
+        body {
             background-image: url("images/bg.jpg");
         }
     </style>
@@ -61,25 +62,29 @@
     </nav>
 </div>
 <article>
-    <!--Code gì thì code chỉ được code ở trong này nhé-->
-    <h1> <body>
     <div class="container">
         <div class="container1">
             <div class="details1">
                 <h4>ĐÔNG HÙNG - 10/11</h4>
-                <span style="color: white; font-size: 14px">Việt Nam</span><p></p><br>
-                <p>Nguyễn Đông Hùng, được biết tới với nghệ danh Đông Hùng là một ca sĩ trẻ có nhiều tiềm năng. Bước chân
+                <span>Việt Nam</span>
+                <p></p><br>
+                <p>Nguyễn Đông Hùng, được biết tới với nghệ danh Đông Hùng là một ca sĩ trẻ có nhiều tiềm năng. Bước
+                    chân
                     vào con đường nghệ thuật mới 5 năm, nhưng Đông Hùng đã nhanh chóng ghi dấu trong lòng khán giả khi
-                    thường xuyên góp mặt cùng các nghệ sĩ hàng đầu Việt Nam trong các sự kiện lớn. Với tính kiên định, bền
+                    thường xuyên góp mặt cùng các nghệ sĩ hàng đầu Việt Nam trong các sự kiện lớn. Với tính kiên định,
+                    bền
                     bỉ và chất giọng sáng, đẹp, kỹ thuật thanh nhạc chắc chắn, Đông Hùng đang từng bước khẳng định chính
                     mình trong mắt các nghệ sĩ đàn anh cũng như các nhà sản xuất âm nhạc.
 
-                    Thế mạnh của Đông Hùng nằm ở những nốt cao , nhưng không vì thế mà mất đi chất trầm mặc tự sự. Đến với
-                    Monsoon Music Festival 2017 lần này, Đông Hùng sẽ mang đến những sản phẩm mới nhất của chính mình, được
-                    thực hiện bởi những người nhạc sĩ yêu mến Đông Hùng, và được trình diễn lần đầu tiên trước toàn bộ khán
+                    Thế mạnh của Đông Hùng nằm ở những nốt cao , nhưng không vì thế mà mất đi chất trầm mặc tự sự. Đến
+                    với
+                    Monsoon Music Festival 2017 lần này, Đông Hùng sẽ mang đến những sản phẩm mới nhất của chính mình,
+                    được
+                    thực hiện bởi những người nhạc sĩ yêu mến Đông Hùng, và được trình diễn lần đầu tiên trước toàn bộ
+                    khán
                     giả của Monsoon Music Festival.</p>
 
-                <div class="lo1">
+                <div id="lo1" class="lo1">
                     <a href="https://www.facebook.com/DongHungIdol/">f</a>
                 </div>
 
@@ -90,8 +95,6 @@
         </div>
 
     </div>
-
-    </body></h1>
 </article>
 </body>
 </html>
