--- a/ChiTietNgheSy3.html
+++ b/ChiTietNgheSy3.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>NGỌT - 10/11</h4>
-                    <span style="color: white; font-size: 14px">Việt Nam</span>
+                    <span >Việt Nam</span>
                     <p></p><br>
                     <p>Ngọt là nhóm nghệ sĩ trẻ 9X hoạt động âm nhạc độc lập (indie) nhiều năm qua giữa
                         Hà Nội với 4 thành viên: Vũ Đinh Trọng Thắng, Nguyễn Hùng Nam Anh, Nguyễn Chí Hùng và
