--- a/ChiTietNgheSy5.html
+++ b/ChiTietNgheSy5.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>LOST FREQUENCIES - 12/11</h4>
-                    <span style="color: white; font-size: 14px">Bỉ</span>
+                    <span>Bỉ</span>
                     <p></p><br>
                     <p>Felix De Laet, được biết đến nhiều hơn bởi tên gọi Lost Frequencies, là một nghệ sĩ đã đạt được
                         nhiều thành công trong nền công nghiệp âm nhạc quốc tế . Bản hit "Are You With Me" (phát hành
