--- a/ChiTietNgheSy6.html
+++ b/ChiTietNgheSy6.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>BUD - 10/11</h4>
-                    <span style="color: white; font-size: 14px">UK</span>
+                    <span>UK</span>
                     <p></p><br>
                     <p>Ngay khi ca khúc đầu tay của cô có mặt trên danh sách các ca khúc được BBC lựa chọn và giới thiệu
                         trên Radio 1 và 1Xtra, BUD đã là 1 trong 20 nghệ sĩ được nghe nhiều nhất năm 2016. BUD là gương
