--- a/ChiTietNgheSy7.html
+++ b/ChiTietNgheSy7.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>CHRIS MINH DOKY & THE ELECTRIC NOMADS - 12/11</h4>
-                    <span style="color: white; font-size: 14px">Bỉ</span>
+                    <span>Bỉ</span>
                     <p></p><br>
                     <p>Chris Minh Doky (sinh ngày 7 tháng 2 năm 1969) là một nghệ sĩ đàn bass với hai dòng máu Việt Nam
                         - Đan Mạch, sống tại Copenhagen và New York. Chris Minh là em trai của nhạc sĩ - nhạc công piano
