--- a/ChiTietNgheSy8.html
+++ b/ChiTietNgheSy8.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="css/ChiTietNgheSy.css">
     <style>
@@ -68,7 +69,7 @@
             <div class="container1">
                 <div class="details1">
                     <h4>DA LAB - 11/11</h4>
-                    <span style="color: white; font-size: 14px">Việt Nam</span>
+                    <span>Việt Nam</span>
                     <p></p><br>
                     <p>Dù là một nhóm nhạc underground nhưng Da LAB có không ít ca khúc quen thuộc với giới trẻ như "Một
                         nhà", "Hà Nội giờ tan tầm" hay "Về nhà"... Giữa bối cảnh rap Việt những năm 2000 tràn ngập những
