--- a/TrachNhiemXaHoi.html
+++ b/TrachNhiemXaHoi.html
@@ -2,15 +2,85 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/cssLayout.css" rel="stylesheet" type="text/css"/>
     <link href="css/TrachNhiemXaHoi.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,400,400i,600,700&amp;subset=vietnamese"
+          rel="stylesheet">
     <style>
         body {
             background: url("images/background_csr.jpg");
+            width: 100%;
+            height: 100%;
+        }
+
+        @media all and (max-width: 414px) {
+            body {
+                background-attachment: scroll;
+                text-align: justify;
+            }
+
+            .time a {
+                display: none;
+            }
+
+            .relative {
+                display: none;
+            }
+
+            .header h1 {
+                font-size: 70px;
+                position: absolute;
+                top: 300px;
+                left: 20%;
+            }
+
+            .header img {
+                width: 700px;
+            }
+
+            .title p {
+                font-size: 40px;
+                line-height: 70px;
+                position: absolute;
+                top: 0px;
+            }
+
+            article {
+                width: 100%;
+                margin-left: 0%;
+            }
+
+            .event1 {
+                padding: 0px;
+            }
+
+            .event1 .even1-1 {
+                width: 100%;
+                clear: both;
+            }
+
+            .event1 .even1-1 p {
+                font-size: 40px;
+                line-height: 70px;
+                font-weight: 100;
+            }
+
+            .event1 .even1-2 {
+                clear: both;
+                width: 100%;
+                margin-left: 0px;
+            }
+
+            .event1 .even1-2 img {
+                width: 1000px;
+                height: auto;
+                padding: 10%;
+                box-shadow: none;
+            }
         }
     </style>
-    <title>event 2016</title>
+    <title>Trách nhiệm xã hội</title>
 </head>
 <body>
 <div class="relative">
@@ -69,11 +139,14 @@
                 <i class="fa fa-facebook" aria-hidden="true"></i>
             </div>
             <img src="images/logo-monsoon-only.png">
-            <h1 style="color: #FFFFFF;font-size: 40px;font-weight: 100;position: absolute;bottom: 1px;left: 27%">TRÁCH NHIỆM XÃ HỘI</h1>
+            <h1>
+                TRÁCH
+                NHIỆM XÃ HỘI</h1>
         </div>
         <div class="title">
             <p>Là một sản phẩm văn hoá của Hà Nội dành cho cư dân Thủ đô, Monsoon Music Festival có một
-                phần trách nhiệm đối với cộng đồng. Trong suốt 3 năm vừa qua, chúng tôi luôn đóng góp một tiếng nói tích cực đến
+                phần trách nhiệm đối với cộng đồng. Trong suốt 3 năm vừa qua, chúng tôi luôn đóng góp một tiếng nói tích
+                cực đến
                 với xã hội với các chủ đề "Bảo vệ môi trường", "Ứng xử cộng đồng" và "Văn hoá giao thông".</p>
         </div>
 
@@ -91,7 +164,6 @@
                 <img src="images/CSR1.jpg" width="679px" height="519px"/>
             </div>
         </div>
-
 
 
     </div>
